--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,17 +11,35 @@ add_library(Serializer STATIC src/Codec/Serializer.cpp)
 target_include_directories(Serializer PUBLIC include)
 
 add_executable(test_msg_add_integral tests/test_msg_add_integral.cpp)
-target_compile_options(test_msg_add_integral PRIVATE -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
-target_link_options(test_msg_add_integral PRIVATE -fsanitize=address)
-target_link_libraries(test_msg_add_integral PRIVATE Message)
+target_compile_options(test_msg_add_integral PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_msg_add_integral PUBLIC -fsanitize=address)
+target_link_libraries(test_msg_add_integral PUBLIC Message)
 
 add_executable(test_msg_add_string tests/test_msg_add_string.cpp)
-target_compile_options(test_msg_add_string PRIVATE -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
-target_link_options(test_msg_add_string PRIVATE -fsanitize=address)
-target_link_libraries(test_msg_add_string PRIVATE Message)
+target_compile_options(test_msg_add_string PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_msg_add_string PUBLIC -fsanitize=address)
+target_link_libraries(test_msg_add_string PUBLIC Message)
 
 
 add_executable(test_serializer tests/test_serializer.cpp)
-target_compile_options(test_serializer PRIVATE -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
-target_link_options(test_serializer PRIVATE -fsanitize=address)
-target_link_libraries(test_serializer PRIVATE Serializer Message)
+target_compile_options(test_serializer PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_serializer PUBLIC -fsanitize=address)
+target_link_libraries(test_serializer PUBLIC Serializer Message)
+
+add_executable(test_encoder_integral tests/test_encoder_integral.cpp)
+target_compile_options(test_encoder_integral PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_encoder_integral PUBLIC -fsanitize=address)
+target_link_libraries(test_encoder_integral PUBLIC Message)
+target_include_directories(test_encoder_integral PUBLIC include)
+
+add_executable(test_encoder_byte tests/test_encoder_byte.cpp)
+target_compile_options(test_encoder_byte PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_encoder_byte PUBLIC -fsanitize=address)
+target_link_libraries(test_encoder_byte PUBLIC Message)
+target_include_directories(test_encoder_byte PUBLIC include)
+
+add_executable(test_encoder_string tests/test_encoder_string.cpp)
+target_compile_options(test_encoder_string PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_encoder_string PUBLIC -fsanitize=address)
+target_link_libraries(test_encoder_string PUBLIC Message)
+target_include_directories(test_encoder_string PUBLIC include)
