add tests for deserializer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,12 @@ target_link_options(test_encoder_string PUBLIC -fsanitize=address)
 target_link_libraries(test_encoder_string PUBLIC Message)
 target_include_directories(test_encoder_string PUBLIC include)
 
-add_executable(test_deserialize_return tests/test_deserialize_return.cpp)
-target_compile_options(test_deserialize_return PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
-target_link_options(test_deserialize_return PUBLIC -fsanitize=address)
-target_link_libraries(test_deserialize_return PUBLIC Deserializer Message)
+add_executable(test_deserialize_int tests/test_deserialize_int.cpp)
+target_compile_options(test_deserialize_int PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_deserialize_int PUBLIC -fsanitize=address)
+target_link_libraries(test_deserialize_int PUBLIC Deserializer Message)
+
+add_executable(test_deserialize_string tests/test_deserialize_string.cpp)
+target_compile_options(test_deserialize_string PUBLIC -O0 -fsanitize=address -g -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror)
+target_link_options(test_deserialize_string PUBLIC -fsanitize=address)
+target_link_libraries(test_deserialize_string PUBLIC Deserializer Message)
