add sample code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,12 @@ target_include_directories(Server PUBLIC include)
 target_link_libraries(Server PUBLIC Message)
 target_compile_definitions(Server PUBLIC ${SIMPLERPC_COMPILE_DEFINITIONS})
 
-add_executable(client client.cpp)
+add_executable(client sample/add/client.cpp)
 target_include_directories(client PUBLIC include)
 target_link_libraries(client PUBLIC Message Client)
 target_compile_definitions(client PUBLIC ${SIMPLERPC_COMPILE_DEFINITIONS})
 
-add_executable(server server.cpp)
+add_executable(server sample/add/server.cpp)
 target_include_directories(server PUBLIC include)
 target_link_libraries(server PUBLIC Message Server)
 target_compile_definitions(server PUBLIC ${SIMPLERPC_COMPILE_DEFINITIONS})
