--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SIMPLERPC_COMPILE_DEFINITIONS "")
 option(SIMPLERPC_ENABLE_LOGGING "Enable logging" OFF)
 
 if(SIMPLERPC_ENABLE_LOGGING)
-    list(APPEND SIMPLERPC_COMPILE_DEFINITIONS LOGGING)
+    list(APPEND SIMPLERPC_COMPILE_DEFINITIONS ENABLELOGGING)
 endif()
 
 add_library(Message src/Msg/Message.cpp)
